Thu Dec  8 02:07:19 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (umethod_bind): adjust invoking class for module method.
	  [ruby-dev:27964]

Thu Dec  8 00:40:52 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (call_trace_func): klass parameter should be a
	  class/module that defines calling method.  [ruby-talk:169307]

Wed Dec  7 17:10:27 2005  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* sprintf.c (rb_f_sprintf): [ruby-dev:27967]

Wed Dec  7 15:31:35 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* sprintf.c (rb_str_format): integer overflow check added.

	* sprintf.c (GETASTER): ditto.

Wed Dec  7 01:02:04 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/README.macosx-aqua: [new document] tips to avoid the known
	  bug on platform specific dialogs of Tcl/Tk Aqua on MacOS X.

	* ext/tk/tcltklib.c: fix bug on switching threads and waiting on the
	  deleted interpreter on vwait and tkwait command.

	* ext/tk/lib/multi-tk.rb: kill the meaningless loop for the deleted Tk
	  interpreter.

	* ext/tk/sample/demos-jp/image3.rb: [bug fix] wrong argument.

	* ext/tk/sample/demos-en/image3.rb: ditto.

	* ext/tk/sample/demos-jp/menu.rb: fix message for MacOS X.

	* ext/tk/sample/demos-jp/menu8x.rb: ditto.

	* ext/tk/sample/demos-en/menu.rb: ditto.

Tue Dec  4 16:37:57 2005  Yuya Nishida  <yuya@j96.org>

	* eval.c (exec_under): avoid accessing ruby_frame->prev.
	  [ruby-dev:27948]

Thu Dec  1 00:50:33 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_funcall2): allow to call protected methods.
	  fixed: [ruby-dev:27890]

Wed Nov 30 23:52:17 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (NEWHEAP, ADD2HEAP): set count after pointer was set.
	  fixed: [ruby-dev:27896]

Wed Nov 30 13:43:07 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* misc/ruby-mode.el (ruby-expr-beg): support $! at the end of
	  expression.   [ruby-dev:27868]

Mon Nov 28 18:55:43 2005  NAKAMURA Usaku  <usa@ruby-lang.org>
